--- a/Mapps/Mapps/Mapps.csproj
+++ b/Mapps/Mapps/Mapps.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Crc32.NET" Version="1.2.0" />
-    <PackageReference Include="hidlibrary" Version="3.3.40" />
+    <PackageReference Include="HidSharp" Version="2.1.0" />
     <PackageReference Include="Nefarius.ViGEm.Client" Version="1.17.178" />
   </ItemGroup>
 
