--- a/Mapps/SingleControllerManager/SingleControllerManager.csproj
+++ b/Mapps/SingleControllerManager/SingleControllerManager.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Crc32.NET" Version="1.2.0" />
-    <PackageReference Include="HidSharp" Version="2.1.0" />
-    <PackageReference Include="Nefarius.ViGEm.Client" Version="1.17.178" />
+    <ProjectReference Include="..\Mapps\Mapps.csproj" />
   </ItemGroup>
 
 </Project>
